src/test/deca/context/invalid/provided/testi07.deca
class A{
    int methody(boolean a){}
}
class B extends A{
    float methody(boolean a){}
}